# GLO-2100-labos

./: CMakeCache.txt  CMakeLists.txt  executable  executable2  labo_1.cpp  sometest.cc  useful.cc
labo_1/: Makefile  executable2.cc  labo_1.cpp
mylib/include/: mylib.h
mylib/src/: mylib.cc
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
